# wp2shell-poc

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-18-target-list.md
docs/superpowers/specs/: 2026-07-18-target-list-design.md
tests/: test_cli.py  test_shell.py  test_sqli.py
wp2shell/: __init__.py  cli.py  client.py  exploit.py  shell.py  sqli.py  version.py
